force-app/main/default/objects/NotificationGroup__c/NotificationGroup__c.object-meta.xml
<CustomObject>
    <description>[2020.02.10] Notification 발송요청 묶음</description>
    <label>Notification Group</label>
    <nameField>
        <displayFormat>NG{yyMMdd}{0000000000}</displayFormat>
        <label>Notification Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>