force-app/main/default/objects/NotificationGroup__c/fields/fm_TargetRecord__c.field-meta.xml
<CustomField>
    <fullName>fm_TargetRecord__c</fullName>
    <description>Target Record Detail Page URL</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; TargetId__c, TargetId__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Record</label>
    <type>Text</type>
</CustomField>