force-app/main/default/objects/NotificationGroup__c/fields/IF_CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_CompletedDate__c</fullName>
    <description>IF Completed Date 발송완료</description>
    <label>IF Completed Date</label>
    <type>DateTime</type>
</CustomField>