force-app/main/default/objects/NotificationGroup__c/fields/IF_FailedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_FailedDate__c</fullName>
    <description>IF Failed Date</description>
    <label>IF Failed Date</label>
    <type>DateTime</type>
</CustomField>