force-app/main/default/objects/NotificationGroup__c/fields/IF_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>IF_RequestedDate__c</fullName>
    <description>IF Requested Date</description>
    <label>IF Requested Date</label>
    <type>DateTime</type>
</CustomField>