force-app/main/default/objects/NotificationGroup__c/fields/IF_Status__c.field-meta.xml
<CustomField>
    <fullName>IF_Status__c</fullName>
    <description>biz Status  발송 대기, 발송, 발송실패, 완료, 실패</description>
    <label>IF_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IF_BizStatus</valueSetName>
    </valueSet>
</CustomField>