force-app/main/default/objects/NotificationGroup__c/fields/ru_NumberOfTotalComplete__c.field-meta.xml
<CustomField>
    <fullName>ru_NumberOfTotalComplete__c</fullName>
    <description>Number Of Total Complete</description>
    <label>Number Of Total Complete</label>
    <summaryFilterItems>
        <field>Notification__c.IF_CompletedDate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Notification__c.msg_status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Notification__c.NotificationGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>