force-app/main/default/objects/NotificationGroup__c/fields/ru_NumberOfTotalFail__c.field-meta.xml
<CustomField>
    <fullName>ru_NumberOfTotalFail__c</fullName>
    <description>Number Of Total Fail</description>
    <label>Number Of Total Fail</label>
    <summaryFilterItems>
        <field>Notification__c.IF_FailedDate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Notification__c.msg_status__c</field>
        <operation>equals</operation>
        <value>Failed, Failed request</value>
    </summaryFilterItems>
    <summaryForeignKey>Notification__c.NotificationGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>