force-app/main/default/objects/NotificationGroup__c/fields/ru_NumberOfTotalNotification__c.field-meta.xml
<CustomField>
    <fullName>ru_NumberOfTotalNotification__c</fullName>
    <description>Number Of Total Notification</description>
    <label>Number Of Total Notification</label>
    <summaryForeignKey>Notification__c.NotificationGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>