force-app/main/default/objects/NotificationGroup__c/fields/ru_NumberOfTotalPending__c.field-meta.xml
<CustomField>
    <fullName>ru_NumberOfTotalPending__c</fullName>
    <description>Number Of Total Pending</description>
    <label>Number Of Total Pending</label>
    <summaryFilterItems>
        <field>Notification__c.msg_status__c</field>
        <operation>equals</operation>
        <value>,Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Notification__c.NotificationGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>