force-app/main/default/objects/NotificationGroup__c/fields/ru_NumberOfTotalRequests__c.field-meta.xml
<CustomField>
    <fullName>ru_NumberOfTotalRequests__c</fullName>
    <description>Number Of Total Requests</description>
    <label>Number Of Total Requests</label>
    <summaryFilterItems>
        <field>Notification__c.IF_RequestedDate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Notification__c.NotificationGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>