force-app/main/default/objects/NotificationGroup__c/fields/TargetId__c.field-meta.xml
<CustomField>
    <fullName>TargetId__c</fullName>
    <description>대상 Object</description>
    <label>TargetId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>