force-app/main/default/objects/NotificationGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IF_Status__c</columns>
    <columns>IF_RequestedDate__c</columns>
    <columns>IF_CompletedDate__c</columns>
    <columns>IF_FailedDate__c</columns>
    <columns>ru_NumberOfTotalNotification__c</columns>
    <columns>ru_NumberOfTotalPending__c</columns>
    <columns>ru_NumberOfTotalRequests__c</columns>
    <columns>ru_NumberOfTotalComplete__c</columns>
    <columns>ru_NumberOfTotalFail__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>